k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nasa-apod-app
  namespace: apps
  labels:
    app: nasa-apod-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nasa-apod-app
  template:
    metadata:
      labels:
        app: nasa-apod-app
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nasa-apod-app
          image: ghcr.io/kevwal1/nasa-apod:d55942657796fcfad2eb7a4b79bdf0cdafd7c0e5@sha256:75dcad182ec9a0215f7ed8f6425bd83c3332f37284edc60284dd1e85effcc872
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
