k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nasa-apod-app
  namespace: apps
  labels:
    app: nasa-apod-app
spec:
  type: ClusterIP
  selector:
    app: nasa-apod-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
