k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasa-apod-app
  namespace: apps
  labels:
    app: nasa-apod-app
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /apod/
            pathType: Prefix
            backend:
              service:
                name: nasa-apod-app
                port:
                  number: 80
